# vapar-code-test

./: .gitignore  README.md  lerna.json  package.json  pyproject.toml  vapar.code-workspace
application/: build.ts  package.json  pyproject.toml  tsconfig.json
application/static/: vapar.css  vapar.tsx
application/tests/: test_repos.py
application/vapar/: manage.py
application/vapar/github/: serializers.py  urls.py  views.py
application/vapar/static/: vapar.css
application/vapar/templates/: index.html
application/vapar/vapar/: asgi.py  urls.py  wsgi.py
application/vapar/vapar/settings/: local.py
libs/frontend/: index.html  package.json  tsconfig.json
libs/frontend/src/: VaparApp.tsx  index.css  main.tsx  server.ts
libs/frontend/src/components/: Error.tsx  RepoDetails.tsx  RepoSearch.tsx
