[project]
name = "vp"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam Dyson", email = "mail@samdyson.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.6"

[tool.poetry.group.vapar.dependencies]
vapar = { path = "application", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-httpx = "^0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"